# affect-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  container.sh  deploy.sh  entrypoint.sh  envoy.yaml  run.sh
server/: Cargo.toml  affect.example.toml  config.example.toml  config.toml
server/src/: change.rs  config.rs  firebase.rs  lib.rs  main.rs  money.rs  prost.rs  protos.rs  seed.rs  services.rs  tonic.rs  user_service.rs
server/src/change/: api.rs  client.rs
server/src/interceptors/: authn.rs
server/src/prost/: from.rs  into.rs
server/src/protobuf/: from.rs  into.rs
server/src/protos/: affiliate.rs  cause.rs  item.rs  nonprofit.rs  user.rs  well_known.rs
server/src/services/: affiliate.rs  cause.rs  donation.rs  item.rs  nonprofit.rs  user.rs
server/src/tonic/: async_interceptor.rs
server/tests/: cause_service.rs
storage/: Cargo.toml  example.env  sqlx-data.json
storage/migrations/: 20220225010340_init.down.sql  20220225012302_create_users.up.sql  20220225234600_create_affiliates.down.sql  20220225234600_create_affiliates.up.sql  20220225234636_create_nonprofits.down.sql  20220225234636_create_nonprofits.up.sql  20220302074650_create_items.up.sql  20220303053112_create_accounts.up.sql  20220305014105_create_ach_credentials.down.sql  20220305014105_create_ach_credentials.up.sql  20220305021430_create_causes.down.sql  20220305021430_create_causes.up.sql  20220305021640_create_cause_recipients.down.sql  20220305021640_create_cause_recipients.up.sql  20220328043214_create_affiliate_managers.down.sql  20220328043214_create_affiliate_managers.up.sql  20220330012637_create_fk_affiliate_asserted_nonprofit_id.down.sql  20220330012637_create_fk_affiliate_asserted_nonprofit_id.up.sql  20220401031841_create_full_affiliates.down.sql  20220401031841_create_full_affiliates.up.sql  20220405011018_create_full_causes.down.sql  20220405011018_create_full_causes.up.sql  20220405012123_create_full_nonprofits.down.sql  20220405012123_create_full_nonprofits.up.sql  README.md  nonprofit.rs
storage/mocks/: Cargo.toml
storage/mocks/src/: lib.rs
storage/queries/account/: count.sql  delete.sql  insert.sql  list.sql  list_at_page.sql  list_for_item.sql
storage/queries/affiliate/: find_by_id.sql  insert.sql
storage/queries/affiliate_manager/: insert.sql  list_for_affiliate.sql  list_for_user.sql
storage/queries/cause/: count_for_user.sql  insert.sql  list_at_page_for_user.sql  list_for_user.sql
storage/queries/cause_recipient/: insert.sql  list_for_cause.sql
storage/queries/item/: count_for_user.sql  delete.sql  find_by_id.sql  insert.sql  list.sql  list_at_page_for_user.sql  list_for_user.sql
storage/queries/nonprofit/: count.sql  count_by_search.sql  find_by_id.sql  insert.sql  list.sql  list_at_page.sql  list_by_search.sql  list_by_search_at_page.sql
storage/queries/user/: count.sql  find_by_firebase_uid.sql  insert.sql  list.sql  list_at_page.sql
storage/src/: lib.rs  models.rs  page_token.rs  sqlx.rs  stores.rs  user.rs
storage/src/database/: client.rs  store.rs
storage/src/models/: account.rs  affiliate.rs  cause.rs  donation.rs  item.rs  nonprofit.rs  user.rs
storage/src/sqlx/: client.rs  pool.rs  store.rs
storage/src/stores/: account.rs  affiliate.rs  cause.rs  cause_and_recipient.rs  cause_recipient.rs  item.rs  item_and_account.rs  nonprofit.rs  user.rs
storage/src/tests/: integration.rs  testing.rs
storage/tests/: common.rs  nonprofit.rs  pg_pool.rs
(+10 files in other folders)
