[package]
edition = "2021"
name = "affect-server"
version = "0.1.0"

[dependencies]
affect-api = { git = "https://github.com/affectapp/api", rev = "1342bed2" }
affect-storage = { path = "../storage" }
chrono = { version = "0.4" }
jwks-client = { version = "0.2", git = "https://github.com/jfbilodeau/jwks-client" }
prost-types = "0.9"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
tonic = "0.6"
tonic-reflection = "0.3.0"
tonic-web = "0.2"
uuid = { version = "0.8", features = ["v4"] }
