[package]
edition = "2021"
name = "affect-server"
version = "0.1.0"

[dependencies]
affect-api = { git = "https://github.com/affectapp/api", rev = "1342bed2" }
affect-storage = { path = "../storage" }
async-trait = "0.1"
base64 = "0.13"
chrono = { version = "0.4" }
futures = "0.3"
hyper = "0.14"
jwks-client = { version = "0.2", git = "https://github.com/jfbilodeau/jwks-client" }
prost = "0.9"
prost-types = "0.9"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
tonic = "0.6"
tonic-reflection = "0.3.0"
tower = "0.4"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
env_logger = "0.9"
reqwest = "0.11"
derive_builder = "0.10"
